remediation/network-ec2-vpc/fix-prowler_ec2_networkacl_allow_ingress_tcp_port_3389_arn_aws_ec2_eu_west_1_132410971304_network_acl_acl_0bc682f441ce85c26_eu_west_1.tf
resource "aws_network_acl_rule" "fix_network_acl_ingress_deny_2f75b0d9d5" {
  network_acl_id = "acl-0bc682f441ce85c26"
  egress         = false
  rule_number    = 252
  protocol       = "6"
  rule_action    = "deny"
  cidr_block     = "0.0.0.0/0"
  from_port      = 3389
  to_port        = 3389
  lifecycle {
    ignore_changes = [icmp_type, icmp_code]
  }
}
